--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 b {
   color: white;
   background-color: #3699ff;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
+  padding: 20px 100% 20px 20px;
 }
