--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 b {
   color: white;
-  background-color: #3699ff;
-  padding: 20px 100% 20px 20px;
 }
+
+.header {
+  background-color: #3699ff;
+  width: 100%;
+}
+
