--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,15 @@
   padding: 15px 0 20px 15px;
 }
 
+.body {
+  padding: 20px 100px 40px 100px;
+}
+
+.card {
+  width: 250px;
+}
+
+.cardimg {
+  width: 250px;
+  border-radius: 5px;
+}
