--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,65 @@
 
 .body {
   padding: 20px 100px 40px 100px;
+  background-color: #eef5f9;
+}
+
+.container {
+  
 }
 
 .card {
   width: 250px;
+  height: 470px;
+  box-shadow: 0px 5px 15px 0px gainsboro;
+  margin-bottom: 30px;
+  background-color: white;
+  border-radius: 5px;
 }
 
-.cardimg {
+.image {
   width: 250px;
+  border-radius: 5px;
+}
+
+.title {
+  margin: 10px 20px 0 20px;
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.category {
+  margin: 0 20px 0 20px;
+}
+
+.instructions {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  margin: 20px;
+}
+
+.buttons {
+  display: flex;
+  margin: 0 0 30px 20px;
+}
+
+.youtube {
+  margin-right: 5px;
+  background-color: #f64e60;
+  border: none;
+  color: white;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+.source {
+  background-color: #3699ff;
+  border: none;
+  color: white;
+  padding: 8px;
   border-radius: 5px;
 }
