--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,23 @@
   color: white;
   background-color: #3699ff;
   width: 100%;
-  padding: 15px 0 20px 15px;
+  padding: 15px;
 }
 
 .body {
-  padding: 20px 100px 40px 100px;
+  padding: 10px;
   background-color: #eef5f9;
 }
 
 .container {
-  
+  display: flex;
 }
 
 .card {
   width: 250px;
   height: 470px;
   box-shadow: 0px 5px 15px 0px gainsboro;
-  margin-bottom: 30px;
+  margin: 14px;
   background-color: white;
   border-radius: 5px;
 }
