--- a/src/App.css
+++ b/src/App.css
@@ -6,16 +6,18 @@
 }
 
 .body {
-  padding: 10px;
+  padding: 14px;
   background-color: #eef5f9;
+  max-width: 1200px;
 }
 
 .container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .card {
-  width: 250px;
+  max-width: 250px;
   height: 470px;
   box-shadow: 0px 5px 15px 0px gainsboro;
   margin: 14px;
@@ -24,7 +26,7 @@
 }
 
 .image {
-  width: 250px;
+  width: 100%;
   border-radius: 5px;
 }
 
