--- a/src/App.css
+++ b/src/App.css
@@ -6,22 +6,22 @@
 }
 
 .body {
-  padding: 14px;
+  padding: 14px 14px 30px 14px;
   background-color: #eef5f9;
 }
 
 .container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 0px;
 }
 
 .card {
-  max-width: 250px;
-  height: 470px;
   box-shadow: 0px 5px 15px 0px gainsboro;
   margin: 14px;
   background-color: white;
   border-radius: 5px;
+  padding-bottom: 20px;
 }
 
 .image {
@@ -51,7 +51,7 @@
 
 .buttons {
   display: flex;
-  margin: 0 0 30px 20px;
+  margin: 0 0 0px 20px;
 }
 
 .youtube {
